# python-project-83

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  database.sql  pyproject.toml
.github/workflows/: github-actions-demo.yml  main-actions.yml
page_analyzer/: __init__.py  app.py  parser.py  psql.py  psql_.py
page_analyzer/templates/: base.html  details.html  footer.html  header.html  index.html  layout.html  messages.html  new.html  two.html  urls.html
page_analyzer/templates/urls/: index.html  messages.html  output.html
tests/: root.py  test_app.py  test_psql.py
