[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["artur sharipov <sharipoffartur@yandex.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.10"
poetry = "1.4.2"
flask = "2.3.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
validators = "^0.22.0"
psycopg2 = "2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
flake8 = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

